# MAB_algo

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
mab_ucb_bandit/: __init__.py  node.py  ucb_bandit.py
requirements/: base.txt  dev.txt  ros.txt
resource/: mab_ucb_bandit
test/: test_ucb_bandit.py
