<?xml version="1.0"?>
<package format="3">
  <name>mab_ucb_bandit</name>
  <version>0.0.1</version>
  <description>ROS 2 package for a 4-armed bandit solved with UCB1.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
